# PerCE

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quick_start.py
notebooks/: 01_ECG_demo.ipynb  02_custom_model.ipynb  03_CEval_evaluation.ipynb  03_evaluation.ipynb
perce/: __init__.py  explainer.py  importance.py  metrics.py  neighbors.py  perturbation.py
tests/: test_perce.py
