[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perce"
version = "0.1.0"
description = "Hierarchical Perturbation-Based Counterfactual Explanations for Multivariate Time Series"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Betül Bayrak", email = "betul.bayrak@ntnu.no" }, ]
keywords = [
    "explainable-ai", "xai", "counterfactual-explanations",
    "time-series", "ecg", "multivariate", "perturbation",
    "interpretability", "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "wfdb>=4.1",           # for loading ECG data
    "requests>=2.31",
]
ecg = [
    "wfdb>=4.1",
    "h5py>=3.9",           # for loading CODE-test dataset
    "matplotlib>=3.7",
]
torch = [
    "torch>=2.0",
]
full = [
    "perce[dev,ecg,torch]"
]

[project.urls]
Homepage      = "https://github.com/b-bayrak/PerCE"
Documentation = "https://github.com/b-bayrak/PerCE#readme"
Repository    = "https://github.com/b-bayrak/PerCE"
"Bug Tracker" = "https://github.com/b-bayrak/PerCE/issues"
Paper         = "https://doi.org/10.1109/ACCESS.2025.3639125"

[tool.setuptools.packages.find]
where = ["."]
include = ["perce*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# N803/N806 (argument/variable naming) are ignored because X, C, T are
# standard conventions in scientific Python / machine-learning code.
ignore = ["N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
